fixed some colors in dark mode of ticket page and changed clor of selection in it

--- a/assets/base/css/style.css
+++ b/assets/base/css/style.css
@@ -638,6 +638,9 @@ select.dv-input {
 #dv-dashboard-main[data-theme='dark'] .ck-on{background-color: var(--mid-blue);}
 #dv-dashboard-main[data-theme='dark'] .ck-toolbar path{fill: white;}
 #dv-dashboard-main[data-theme='dark'] .ck-list__item{background-color: var(--darkest-blue);}
+#dv-dashboard-main[data-theme='dark'] .dv-ticket-page-main > h1:first-of-type{color: white;}
+#dv-dashboard-main[data-theme='dark'] .dv-ticket-page-main > form > h1:first-of-type{color: white;}
+#dv-dashboard-main[data-theme='dark'] ::selection {background-color: var(--blue);}
 #dv-dashboard-main[data-theme='dark'] .dv-input{
     background-color: var(--darkest-blue);
     border-color: rgba(256, 256, 256, .2);
